--- a/src/app/header3/header3.component.html
+++ b/src/app/header3/header3.component.html
@@ -7,27 +7,29 @@
     <title>Document</title>
   </head>
   <body>
-    <nav class="navbar1">
-      <div class="logo"><a href="#">Snad</a></div>
-      <ul class="nav-link">
-        <input type="checkbox" id="btn-toggle" />
-        <label class="btn-toggle" class="hamburger-icon">&#9776;</label>
-        <div class="menu">
-          <li><a href="index.html">Home</a></li>
-          <li><a href="index.html">About</a></li>
-          <li class="vidoes">
-            <a href="#getprochanel">vidoes</a>
-            <ul>
-              <li><a href="#videoLink">practice #01</a></li>
-              <li><a href="#videoLink">practice #01</a></li>
-              <li><a href="#videoLink">practice #01</a></li>
-              <li><a href="#videoLink">practice #01</a></li>
-              <li><a href="#videoLink">practice #01</a></li>
-            </ul>
-          </li>
-          <li><a href="index.html">Contact</a></li>
-        </div>
-      </ul>
-    </nav>
+    <section>
+      <nav class="navbar1">
+        <div class="logo"><a href="#">Snad</a></div>
+        <ul class="nav-links1">
+          <input type="checkbox" id="btn-toggle" />
+          <label class="btn-toggle1" class="hamburger-icon1">&#9776;</label>
+          <div class="menu1">
+            <li><a href="index.html">Home</a></li>
+            <li><a href="index.html">About</a></li>
+            <li class="vidoes">
+              <a href="#getprochanel">videos</a>
+              <ul class="dropdown">
+                <li><a href="#videoLink">practice #01</a></li>
+                <li><a href="#videoLink">practice #01</a></li>
+                <li><a href="#videoLink">practice #01</a></li>
+                <li><a href="#videoLink">practice #01</a></li>
+                <li><a href="#videoLink">practice #01</a></li>
+              </ul>
+            </li>
+            <li><a href="index.html">Contact</a></li>
+          </div>
+        </ul>
+      </nav>
+    </section>
   </body>
 </html>
