--- a/src/app/header1/header1.component.css
+++ b/src/app/header1/header1.component.css
@@ -1,433 +1,429 @@
-*{
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
 }
 
-
-ul{
-    list-style: none;
-    text-align: center;
+ul {
+  list-style: none;
+  text-align: center;
 }
 
-a{
-    text-decoration: none;
-    text-align: center;
+a {
+  text-decoration: none;
+  text-align: center;
 }
 
-header{
-    font-family: 'Poppins', sans-serif;
-    position: sticky;
-    top: 0px;
-    background-color: #ffffff;
-    width: 100%;
-    z-index: 1000;
-    padding: 0;
-    margin: 0;
+header {
+  font-family: "Poppins", sans-serif;
+  position: sticky;
+  top: 0px;
+  background-color: #ffffff;
+  width: 100%;
+  z-index: 1000;
+  padding: 0;
+  margin: 0;
 }
 
-section{
-    position: relative;
-    height: calc(100vh - 3rem);
-    width: 100%;
-    overflow: hidden;
+section {
+  position: relative;
+  height: calc(100vh - 3rem);
+  width: 100%;
+  overflow: hidden;
 }
 
-
-
-.container{
-    max-width: 85rem;
-    padding: 0 2rem;
-    margin: 0 auto;
-    margin-top: 2rem;
-    margin-bottom: 1rem;
-    display: flex;
-    position: relative;
+.container {
+  max-width: 85rem;
+  padding: 0 2rem;
+  margin: 0 auto;
+  margin-top: 2rem;
+  margin-bottom: 1rem;
+  display: flex;
+  position: relative;
 }
 
-.logo-container{
-    flex: 1;
-    display: flex;
-    align-items: center;
-    justify-content: baseline;
+.logo-container {
+  flex: 1;
+  display: flex;
+  align-items: center;
+  justify-content: baseline;
 }
 
-.nav-btn{
-    flex: 3;
-    display: flex;
-    justify-content: baseline;
-    text-align: center;
+.nav-btn {
+  flex: 3;
+  display: flex;
+  justify-content: baseline;
+  text-align: center;
 }
 
-.nav-links{
-    flex: 2;
+.nav-links {
+  flex: 2;
 }
 
-.log-sign{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex: 1;
-   
+.log-sign {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex: 1;
 }
 
-
-.btn{
-    display: inline-block;
-    padding: .8rem 1.3rem;
-    font-size: 1rem;
-    border-radius: 2rem;
-    margin: 0 .2rem;
-    transition: .3s;
-    font-weight: 600;
-
+.btn {
+  display: inline-block;
+  padding: 0.8rem 1.3rem;
+  font-size: 1rem;
+  border-radius: 2rem;
+  margin: 0 0.2rem;
+  transition: 0.3s;
+  font-weight: 600;
 }
 
-.btn.solid, .btn.transparent:hover{
-    background-color: rgb(128, 85, 246);
-    color: #ffffff;
+.btn.solid,
+.btn.transparent:hover {
+  background-color: rgb(128, 85, 246);
+  color: #ffffff;
 }
 
-.btn.transparent, .btn.solid:hover{
-    background-color: rgb(57, 57, 245);
-    color: #fff;
+.btn.transparent,
+.btn.solid:hover {
+  background-color: rgb(57, 57, 245);
+  color: #fff;
 }
 
-.nav-links > ul{
-    display: flex;
-    justify-content: center;
-    align-items: center;
+.nav-links > ul {
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
-.nav-link{
-    position: relative;
+.nav-link {
+  position: relative;
 }
 
-.nav-link > a{
-    line-height: 4rem;
-    color: rgb(0, 0, 0);
-    padding: 0 .8rem;
-    letter-spacing: 1px;
-    font-size: 1.2rem;
-    font-weight: 400;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    transition: .5s;
+.nav-link > a {
+  line-height: 4rem;
+  color: rgb(0, 0, 0);
+  padding: 0 0.8rem;
+  letter-spacing: 1px;
+  font-size: 1.2rem;
+  font-weight: 400;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  transition: 0.5s;
 }
 
-.nav-link > a > i{
-    margin-left: .2rem;
+.nav-link > a > i {
+  margin-left: 0.2rem;
 }
 
-.nav-link:hover > a{
-    transform: scale(1.1);
+.nav-link:hover > a {
+  transform: scale(1.1);
 }
 
-.dropdown{
-    position: absolute;
-    top: 100%;
-    left: 0;
-    width: 10rem;
-    transform: translateY(10px);
-    opacity: 0;
-    pointer-events: none;
-    transition: .5s;
+.dropdown {
+  position: absolute;
+  top: 100%;
+  left: 0;
+  width: 10rem;
+  transform: translateY(10px);
+  opacity: 0;
+  pointer-events: none;
+  transition: 0.5s;
 }
 
-.dropdown ul{
-    position: relative;
+.dropdown ul {
+  position: relative;
 }
 
-.dropdown-link > a{
-    display: flex;
-    background-color: #fff;
-    color: #3498db;
-    padding: .5rem 1rem;
-    font-size: .9rem;
-    align-items: center;
-    justify-content: space-between;
-    transition: .3s;
+.dropdown-link > a {
+  display: flex;
+  background-color: #fff;
+  color: #3498db;
+  padding: 0.5rem 1rem;
+  font-size: 0.9rem;
+  align-items: center;
+  justify-content: space-between;
+  transition: 0.3s;
 }
 
-.dropdown-link:hover > a{
-    background-color: #3498db;
-    color: #fff;
+.dropdown-link:hover > a {
+  background-color: #3498db;
+  color: #fff;
 }
 
-.dropdown-link:not(:nth-last-child(2)){
-    border-bottom: 1px solid #efefef;
+.dropdown-link:not(:nth-last-child(2)) {
+  border-bottom: 1px solid #efefef;
 }
 
-.dropdown-link i{
-    transform: rotate(-90deg);
+.dropdown-link i {
+  transform: rotate(-90deg);
 }
 
-.arrow{
-    position: absolute;
-    width: 11px;
-    height: 11px;
-    top: -5.5px;
-    left: 32px;
-    background-color: #fff;
-    transform: rotate(45deg);
-    cursor: pointer;
-    transition: .3s;
-    z-index: -1;
+.arrow {
+  position: absolute;
+  width: 11px;
+  height: 11px;
+  top: -5.5px;
+  left: 32px;
+  background-color: #fff;
+  transform: rotate(45deg);
+  cursor: pointer;
+  transition: 0.3s;
+  z-index: -1;
 }
 
-.dropdown-link:first-child:hover ~ .arrow{
-    background-color: #3498db;
+.dropdown-link:first-child:hover ~ .arrow {
+  background-color: #3498db;
 }
 
-.dropdown-link{
-    position: relative;
+.dropdown-link {
+  position: relative;
 }
 
-.dropdown.second{
-    top: 0;
-    left: 100%;
-    padding-left: .8rem;
-    cursor: pointer;
-    transform: translateX(10px);
+.dropdown.second {
+  top: 0;
+  left: 100%;
+  padding-left: 0.8rem;
+  cursor: pointer;
+  transform: translateX(10px);
 }
 
-.dropdown.second .arrow{
-    top: 10px;
-    left: -5.5px;
+.dropdown.second .arrow {
+  top: 10px;
+  left: -5.5px;
 }
 
 .nav-link:hover > .dropdown,
-.dropdown-link:hover > .dropdown{
-    transform: translate(0, 0);
-    opacity: 1;
-    pointer-events: auto;
+.dropdown-link:hover > .dropdown {
+  transform: translate(0, 0);
+  opacity: 1;
+  pointer-events: auto;
 }
 
-.hamburger-menu-container{
-    flex: 1;
-    display: none;
-    align-items: center;
-    justify-content: flex-end;
+.hamburger-menu-container {
+  flex: 1;
+  display: none;
+  align-items: center;
+  justify-content: flex-end;
 }
 
-.hamburger-menu{
-    width: 2.5rem;
-    height: 2.5rem;
-    display: flex;
-    align-items: center;
-    justify-content: flex-end;
-    border-radius: 1px soild blue;
+.hamburger-menu {
+  width: 2.5rem;
+  height: 2.5rem;
+  display: flex;
+  align-items: center;
+  justify-content: flex-end;
+  border-radius: 1px soild blue;
 }
 
-.hamburger-menu div{
-    width: 1.6rem;
-    height: 3px;
-    border-radius: 3px;
-    background-color: rgb(1, 17, 138);
-    position: relative;
-    z-index: 1001;
-    transition: .5s;
+.hamburger-menu div {
+  width: 1.6rem;
+  height: 3px;
+  border-radius: 3px;
+  background-color: rgb(1, 17, 138);
+  position: relative;
+  z-index: 1001;
+  transition: 0.5s;
 }
 
 .hamburger-menu div:before,
-.hamburger-menu div:after{
-    content: '';
-    position: absolute;
-    width: inherit;
-    height: inherit;
-    background-color: rgb(1, 17, 138);
-    border-radius: 3px;
-    transition: .5s;
+.hamburger-menu div:after {
+  content: "";
+  position: absolute;
+  width: inherit;
+  height: inherit;
+  background-color: rgb(1, 17, 138);
+  border-radius: 3px;
+  transition: 0.5s;
 }
 
-.hamburger-menu div:before{
-    transform: translateY(-7px);
+.hamburger-menu div:before {
+  transform: translateY(-7px);
 }
 
-.hamburger-menu div:after{
-    transform: translateY(7px);
+.hamburger-menu div:after {
+  transform: translateY(7px);
 }
 
-#check{
-    position: absolute;
-    top: 50%;
-    right: 1.5rem;
-    transform: translateY(-50%);
-    width: 2.5rem;
-    height: 2.5rem;
-    z-index: 90000;
-    cursor: pointer;
+#check {
+  position: absolute;
+  top: 50%;
+  right: 1.5rem;
+  transform: translateY(-50%);
+  width: 2.5rem;
+  height: 2.5rem;
+  z-index: 90000;
+  cursor: pointer;
+  opacity: 0;
+  display: none;
+}
+
+#check:checked ~ .hamburger-menu-container .hamburger-menu div {
+  background-color: transparent;
+}
+
+#check:checked ~ .hamburger-menu-container .hamburger-menu div:before {
+  transform: translateY(0) rotate(-45deg);
+}
+
+#check:checked ~ .hamburger-menu-container .hamburger-menu div:after {
+  transform: translateY(0) rotate(45deg);
+}
+
+@keyframes animation {
+  from {
     opacity: 0;
+    transform: translateY(15px);
+  }
+  to {
+    opacity: 1;
+    transform: translateY(0px);
+  }
+}
+
+@media (max-width: 920px) {
+  .hamburger-menu-container {
+    display: flex;
+  }
+
+  #check {
+    display: block;
+  }
+
+  .nav-btn {
+    position: fixed;
+    height: calc(100vh - 3rem);
+    top: 5.5rem;
+    left: 0;
+    width: 100%;
+    background-color: #dfdfdf;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
+    overflow-x: hidden;
+    overflow-y: auto;
+    transform: translateX(100%);
+    transition: 0.65s;
+  }
+
+  #check:checked ~ .nav-btn {
+    transform: translateX(0);
+  }
+
+  #check:checked ~ .nav-btn .nav-link,
+  #check:checked ~ .nav-btn .log-sign {
+    animation: animation 0.5s ease forwards var(--i);
+  }
+
+  .nav-links {
+    flex: initial;
+    width: 100%;
+  }
+
+  .nav-links > ul {
+    flex-direction: column;
+  }
+
+  .nav-link {
+    width: 100%;
+    opacity: 0;
+    transform: translateY(15px);
+  }
+
+  .nav-link > a {
+    line-height: 1;
+    padding: 1.6rem 2rem;
+  }
+
+  .nav-link:hover > a {
+    transform: scale(1);
+    background-color: #50a9d6;
+  }
+
+  .dropdown,
+  .dropdown.second {
+    position: initial;
+    top: initial;
+    left: initial;
+    transform: initial;
+    opacity: 1;
+    pointer-events: auto;
+    width: 100%;
+    padding: 0;
+    background-color: #3183ac;
     display: none;
-}
+  }
 
-#check:checked ~ .hamburger-menu-container .hamburger-menu div{
+  .nav-link:hover > .dropdown,
+  .dropdown-link:hover > .dropdown {
+    display: block;
+  }
+
+  .nav-link:hover > a > i,
+  .dropdown-link:hover > a > i {
+    transform: rotate(360deg);
+  }
+
+  .dropdown-link > a {
     background-color: transparent;
+    color: #fff;
+    padding: 1.2rem 2rem;
+    line-height: 1;
+  }
+
+  .dropdown.second .dropdown-link > a {
+    padding: 1.2rem 2rem 1.2rem 3rem;
+  }
+
+  .dropdown.second .dropdown.second .dropdown-link > a {
+    padding: 1.2rem 2rem 1.2rem 4rem;
+  }
+
+  .dropdown-link:not(:nth-last-child(2)) {
+    border-bottom: none;
+  }
+
+  .arrow {
+    z-index: 1;
+    background-color: #69bde7;
+    left: 10%;
+    transform: scale(1.1) rotate(45deg);
+    transition: 0.5s;
+  }
+
+  .nav-link:hover .arrow {
+    background-color: #50a9d6;
+  }
+
+  .dropdown .dropdown .arrow {
+    display: none;
+  }
+
+  .dropdown-link:hover > a {
+    background-color: #3a91bd;
+  }
+
+  .dropdown-link:first-child:hover ~ .arrow {
+    background-color: #50a9d6;
+  }
+
+  .nav-link > a > i {
+    font-size: 1.1rem;
+    transform: rotate(-90deg);
+    transition: 0.7s;
+  }
+
+  .dropdown i {
+    font-size: 1rem;
+    transition: 0.7s;
+  }
+
+  .log-sign {
+    flex: initial;
+    width: 100%;
+    padding: 1.5rem 1.9rem;
+    justify-content: flex-start;
+    opacity: 0;
+    transform: translateY(15px);
+  }
 }
-
-#check:checked ~ .hamburger-menu-container .hamburger-menu div:before{
-    transform: translateY(0) rotate(-45deg);
-}
-
-#check:checked ~ .hamburger-menu-container .hamburger-menu div:after{
-    transform: translateY(0) rotate(45deg);
-}
-
-@keyframes animation{
-    from{
-        opacity: 0;
-        transform: translateY(15px);
-    }
-    to{
-        opacity: 1;
-        transform: translateY(0px);
-    }
-}
-
-@media (max-width: 920px){
-    .hamburger-menu-container{
-        display: flex;
-    }
-
-    #check{
-        display: block;
-    }
-
-    .nav-btn{
-        position: fixed;
-        height: calc(100vh - 3rem);
-        top: 5.5rem;
-        left: 0;
-        width: 100%;
-        background-color: #dfdfdf;
-        flex-direction: column;
-        align-items: center;
-        justify-content: space-between;
-        overflow-x: hidden;
-        overflow-y: auto;
-        transform: translateX(100%);
-        transition: .65s;
-    }
-
-    #check:checked ~ .nav-btn{
-        transform: translateX(0);
-    }
-
-    #check:checked ~ .nav-btn .nav-link,
-    #check:checked ~ .nav-btn .log-sign{
-        animation: animation .5s ease forwards var(--i);
-    }
-
-    .nav-links{
-        flex: initial;
-        width: 100%;
-    }
-
-    .nav-links > ul{
-        flex-direction: column;
-    }
-
-    .nav-link{
-        width: 100%;
-        opacity: 0;
-        transform: translateY(15px);
-    }
-
-    .nav-link > a{
-        line-height: 1;
-        padding: 1.6rem 2rem;
-    }
-
-    .nav-link:hover > a{
-        transform: scale(1);
-        background-color: #50a9d6;
-    }
-
-    .dropdown, .dropdown.second{
-        position: initial;
-        top: initial;
-        left: initial;
-        transform: initial;
-        opacity: 1;
-        pointer-events: auto;
-        width: 100%;
-        padding: 0;
-        background-color: #3183ac;
-        display: none;
-    }
-    
-    .nav-link:hover > .dropdown,
-    .dropdown-link:hover > .dropdown{
-        display: block;
-    }
-
-    .nav-link:hover > a > i,
-    .dropdown-link:hover > a > i{
-        transform: rotate(360deg);
-    }
-
-    .dropdown-link > a{
-        background-color: transparent;
-        color: #fff;
-        padding: 1.2rem 2rem;
-        line-height: 1;
-    }
-
-    .dropdown.second .dropdown-link > a{
-        padding: 1.2rem 2rem 1.2rem 3rem;
-    }
-
-    .dropdown.second .dropdown.second .dropdown-link > a{
-        padding: 1.2rem 2rem 1.2rem 4rem;
-    }
-
-    .dropdown-link:not(:nth-last-child(2)){
-        border-bottom: none;
-    }
-
-    .arrow{
-        z-index: 1;
-        background-color: #69bde7;
-        left: 10%;
-        transform: scale(1.1) rotate(45deg);
-        transition: .5s;
-    }
-
-    .nav-link:hover .arrow{
-        background-color: #50a9d6;
-    }
-
-    .dropdown .dropdown .arrow{
-        display: none;
-    }
-
-    .dropdown-link:hover > a{
-        background-color: #3a91bd;
-    }
-
-    .dropdown-link:first-child:hover ~ .arrow{
-        background-color: #50a9d6;
-    }
-
-    .nav-link > a > i{
-        font-size: 1.1rem;
-        transform: rotate(-90deg);
-        transition: .7s;
-    }
-
-    .dropdown i{
-        font-size: 1rem;
-        transition: .7s;
-    }
-
-    .log-sign{
-        flex: initial;
-        width: 100%;
-        padding: 1.5rem 1.9rem;
-        justify-content: flex-start;
-        opacity: 0;
-        transform: translateY(15px);
-    }
-}
-
