--- a/src/app/contactus/contactus.component.css
+++ b/src/app/contactus/contactus.component.css
@@ -158,7 +158,70 @@ section::before {
 
 .container1 .contactForm .formBox .inputbox input,
 .container1 .contactForm .formBox .inputbox textarea {
-  width: 100;
+  width: 100%;
   resize: none;
   padding: 5px 0px;
+  font-size: 18px;
+  font-weight: 300;
+  color: #333;
+  border: none;
+  outline: none;
+  border-bottom: 1px solid #777;
+}
+
+.container1 .contactForm .formBox .inputbox textarea{
+  height: 120px;
+}
+
+.container1 .contactForm .formBox .inputbox span{
+  position: absolute;
+  left: 0;
+  padding: 5px 0px;
+  pointer-events: none;
+  font-size: 18px;
+  font-weight: 300;
+  transition: 0.3s;
+}
+
+.container1 .contactForm .formBox .inputbox input:focus~span,
+.container1 .contactForm .formBox .inputbox input:valid~span,
+.container1 .contactForm .formBox .inputbox textarea:focus~span,
+.container1 .contactForm .formBox .inputbox textarea:valid~span{
+  transform:translateY(-20px);
+  font-size: 12px;
+  font-weight: 500;
+  letter-spacing: 1px;
+  color:#3e5fbc;
+}
+
+.container1 .contactForm .formBox .inputbox input[type="submit"]{
+   position: relative;
+   cursor: pointer;
+   background-color: #3e5fbc;
+   color: #ffff;
+   border: none;
+   max-width: 150px;
+   padding: 12px;
+}
+
+.container1 .contactForm .formBox .inputbox input[type="submit"]:hover{
+  background-color: #1515e6;
+
+}
+
+
+/* resige */
+
+@media(max-width :1200px ){
+  .container1{
+    width: 90%;
+    min-height: auto;
+    margin: 2px;
+  }
+  .contactInfo{
+     top:0;
+     height: 500px;;
+     position: relative;
+     box-shadow: none;
+  }
 }
