--- a/src/app/contactus/contactus.component.html
+++ b/src/app/contactus/contactus.component.html
@@ -73,7 +73,7 @@
           <span>Whats your message?</span>
         </div>
         <div class="inputbox w100">
-          <input type="submit" value="send" style="width: 100" />
+          <input type="submit" value="send" />
         </div>
       </div>
     </div>
