--- a/src/app/jsnavbar/jsnavbar.component.html
+++ b/src/app/jsnavbar/jsnavbar.component.html
@@ -10,7 +10,15 @@
     <header>
       <nav class="navbar">
         <div class="branding">
-          <h2><a href="#" class="branding-logo">Smashtheshell</a></h2>
+          <h2>
+            <img
+              alt=""
+              class="logo lo"
+              src="../assets\SNAD Horizontal Logo Main.png"
+              width="150"
+              height="60"
+            />
+          </h2>
         </div>
         <label
           for="input-hamburger"
@@ -22,24 +30,40 @@
         <ul class="menu">
           <li><a href="#" class="menu-link">Home</a></li>
 
-          <li><a href="#" class="menu-link">Portfolio</a></li>
+          <li><a href="#" class="menu-link">About</a></li>
           <li class="has-dropdown">
             <a href="#" class="menu-link"
               >Services
               <span class="arrow"></span>
             </a>
             <ul class="submenu card">
-              <li><a href="#" class="menu-link">Web Design</a></li>
-              <li><a href="#" class="menu-link">Web Development</a></li>
-              <li><a href="#" class="menu-link">UI/UX Design</a></li>
+              <li>
+                <a href="#" class="menu-link"
+                  >Business Application Development</a
+                >
+              </li>
+              <li>
+                <a href="#" class="menu-link">Cloud Transformation Services </a>
+              </li>
+              <li>
+                <a href="#" class="menu-link">Data Base Managment Services</a>
+              </li>
+              <li><a href="#" class="menu-link">Digital Transformation </a></li>
+              <li><a href="#" class="menu-link">Manages It Services</a></li>
+              <li>
+                <a href="#" class="menu-link">Managment Infrastructure</a>
+              </li>
             </ul>
           </li>
-          <li><a href="#" class="menu-link">Articles</a></li>
-          <li><a href="#" class="menu-link">Contact</a></li>
+          <li><a href="#" class="menu-link">Careers</a></li>
+          <li><a href="#" class="menu-link">Blog</a></li>
           <li>
-            <a href="#" class="menu-link">Get In touch</a>
+            <a href="#" class="menu-link d-sm-block d-lg-none">Get In Touch</a>
           </li>
         </ul>
+        <button type="submit" class="menu btn btn-primary p-3 rounded-pill">
+          Get in touch
+        </button>
       </nav>
     </header>
     <main></main>
